--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -20,17 +20,8 @@
         <group id="MyPlugin.SampleMenu" text="_Sample Menu" description="Sample menu">
             <add-to-group group-id="ProjectViewPopupMenu" anchor="last"  />
             <action id="Myplugin.Textboxes" class="com.fyl.leisure.action.GenerateOperationFiles" text="GenerateTable" description="A test menu item" />
+            <add-to-group group-id="ProjectViewPopupMenu" anchor="last"  />
+            <action id="Myplugin.GenerateEntieyMain" class="com.fyl.leisure.action.GenerateEntieyMain" text="GenerateEntieyMain" description="A test menu item" />
         </group>
     </actions>
-
-    <actions>
-        <!-- 定义 id, 对应类和显示的文本 -->
-        <action id="GenerateEntieyMain" class="com.fyl.leisure.action.GenerateEntieyMain" text="GenerateEntieyMain">
-            <!-- 添加到编辑器菜单的第一项 -->
-            <add-to-group group-id="EditorPopupMenu" anchor="first"/>
-            <!-- 可通过 ctrl + H 快捷键触发 -->
-            <keyboard-shortcut keymap="$default" first-keystroke="ctrl H"/>
-        </action>
-    </actions>
-
 </idea-plugin>
