修改插件基础信息

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.leisure0615.leisure
-pluginName = leisure
+pluginName = CodeGeneratorUtil
 pluginRepositoryUrl = https://github.com/Leisure0615/leisure
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 1.0.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 222
