--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.leisure0615.leisure</id>
-    <name>leisure</name>
-    <vendor>leisure0615</vendor>
+    <name>CodeGeneratorUtil</name>
+    <vendor>fangyonglong tangzhipeng</vendor>
 
     <depends>com.intellij.modules.platform</depends>
 
